Añadimos las dll

--- a/Pizzeria_WebAplication/Pizzeria_WebAplication/Pizzeria_WebAplication.csproj
+++ b/Pizzeria_WebAplication/Pizzeria_WebAplication/Pizzeria_WebAplication.csproj
@@ -332,6 +332,20 @@
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.3.1.min.map" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Application\Application.csproj">
+      <Project>{852c4934-0ee5-461e-8212-4062912b4175}</Project>
+      <Name>Application</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Domain\Domain.csproj">
+      <Project>{5f87c9fd-07e7-4b19-9cdd-753d8b57b7f1}</Project>
+      <Name>Domain</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Infrastructure\Infrastructure.csproj">
+      <Project>{90dba4cd-8a14-43a6-a0dc-0ae0ebf3cfa7}</Project>
+      <Name>Infrastructure</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
