Recuperación de las clases del Dominio

--- a/Pizzeria_WebAplication/Domain/Domain.csproj
+++ b/Pizzeria_WebAplication/Domain/Domain.csproj
@@ -42,6 +42,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Commentary.cs" />
+    <Compile Include="EntityBase.cs" />
+    <Compile Include="Ingredients.cs" />
     <Compile Include="Pizza.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
