--- a/Pizzeria_WebAplication/Pizzeria_WebAplication/packages.config
+++ b/Pizzeria_WebAplication/Pizzeria_WebAplication/packages.config
@@ -36,6 +36,8 @@
   <package id="Microsoft.AspNet.WebApi.WebHost.es" version="5.2.4" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.4" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages.es" version="3.2.4" targetFramework="net461" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="2.1.1" targetFramework="net461" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.1.1" targetFramework="net461" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.4" targetFramework="net461" />
   <package id="Microsoft.Owin" version="4.0.0" targetFramework="net461" />
   <package id="Microsoft.Owin.es" version="4.0.0" targetFramework="net461" />
