--- a/Pizzeria_WebAplication/Pizzeria_WebAplication/packages.config
+++ b/Pizzeria_WebAplication/Pizzeria_WebAplication/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
   <package id="Autofac" version="4.8.1" targetFramework="net461" />
+  <package id="Autofac.WebApi2" version="4.0.0" targetFramework="net461" />
   <package id="bootstrap" version="3.3.7" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="EntityFramework.es" version="6.2.0" targetFramework="net461" />
@@ -36,6 +37,8 @@
   <package id="Microsoft.AspNet.WebApi.WebHost.es" version="5.2.4" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.4" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages.es" version="3.2.4" targetFramework="net461" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="2.1.1" targetFramework="net461" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.1.1" targetFramework="net461" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.4" targetFramework="net461" />
   <package id="Microsoft.Owin" version="4.0.0" targetFramework="net461" />
   <package id="Microsoft.Owin.es" version="4.0.0" targetFramework="net461" />
@@ -56,7 +59,9 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.8.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
+  <package id="NLog" version="3.2.1" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
+  <package id="Purplelight.Framework.Autofac.Integration.WebApi" version="0.2.2" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net461" />
   <package id="WebGrease" version="1.6.0" targetFramework="net461" />
 </packages>
