Confirmación de todas lo realizado miércoles 07/11 en clase.

--- a/Pizzeria_WebAplication/Infrastructure/Infrastructure.csproj
+++ b/Pizzeria_WebAplication/Infrastructure/Infrastructure.csproj
@@ -50,14 +50,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Migrations\201811072032574_create.cs" />
+    <Compile Include="Migrations\201811072032574_create.Designer.cs">
+      <DependentUpon>201811072032574_create.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="PizzaContext.cs" />
     <Compile Include="IPizzaContext.cs" />
     <Compile Include="IUOW.cs" />
-    <Compile Include="PizzaContextMigrations\201811061946124_InitialMigrationPizzaContext.cs" />
-    <Compile Include="PizzaContextMigrations\201811061946124_InitialMigrationPizzaContext.Designer.cs">
-      <DependentUpon>201811061946124_InitialMigrationPizzaContext.cs</DependentUpon>
-    </Compile>
-    <Compile Include="PizzaContextMigrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -74,8 +74,8 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="PizzaContextMigrations\201811061946124_InitialMigrationPizzaContext.resx">
-      <DependentUpon>201811061946124_InitialMigrationPizzaContext.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201811072032574_create.resx">
+      <DependentUpon>201811072032574_create.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
