--- a/Pizzeria_WebAplication/Pizzeria_WebAplication/Pizzeria_WebAplication.csproj
+++ b/Pizzeria_WebAplication/Pizzeria_WebAplication/Pizzeria_WebAplication.csproj
@@ -237,7 +237,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AccountController.cs" />
-    <Compile Include="Controllers\PizzaController.cs" />
+    <Compile Include="Controllers\AplicationController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
