--- a/Pizzeria_WebAplication/Pizzeria_WebAplication/Web.config
+++ b/Pizzeria_WebAplication/Pizzeria_WebAplication/Web.config
@@ -10,6 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=aspnet-Pizzeria_WebAplication-0f06bf6c-18ae-4740-ad1f-8bb194d66e6a;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-Pizzeria_WebAplication-0f06bf6c-18ae-4740-ad1f-8bb194d66e6a.mdf" providerName="System.Data.SqlClient" />
+    <add name="PizzeriaApp" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=PizzeriaApp;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
