--- a/Pizzeria_WebAplication/Infrastructure/App.config
+++ b/Pizzeria_WebAplication/Infrastructure/App.config
@@ -5,8 +5,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="Console"
-         connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=Console;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    <add name="PizzeriaApp"
+         connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=PizzeriaApp;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
          providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <entityFramework>
