Guardado del controlador con el getImage y con el PostAdd. Para terminarlo esta tarde.

--- a/Pizzeria_WebAplication/Domain/Domain.csproj
+++ b/Pizzeria_WebAplication/Domain/Domain.csproj
@@ -60,5 +60,11 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Core\Core.csproj">
+      <Project>{a7bb6d82-078d-410e-b36b-2f2fc34060b1}</Project>
+      <Name>Core</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
