--- a/Pizzeria_WebAplication/Infrastructure/App.config
+++ b/Pizzeria_WebAplication/Infrastructure/App.config
@@ -5,6 +5,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
+    <add name="DefaultConnection" 
+         connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=aspnet-Pizzeria_WebAplication-0f06bf6c-18ae-4740-ad1f-8bb194d66e6a;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-Pizzeria_WebAplication-0f06bf6c-18ae-4740-ad1f-8bb194d66e6a.mdf" 
+         providerName="System.Data.SqlClient" />
     <add name="PizzeriaApp"
          connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=PizzeriaApp;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
          providerName="System.Data.SqlClient"/>
